# first-personal-assistant

./: .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
docs/plans/: 2026-03-19-mobile-responsive.md
docs/specs/: 2026-03-19-mobile-responsive-design.md  2026-03-21-cron-rework-design.md  2026-03-21-session-debugger-design.md
prompts/: deep_research.md  draft_longform.md  general.md  planner.md  primary.md  search.md  writer.md
skills/content-writer/: SKILL.md
skills/content_writer/: SKILL.md
skills/memory-management/: SKILL.md
skills/memory_management/: SKILL.md
skills/search-topic-online/: SKILL.md
skills/search_web/: SKILL.md
skills/skill-creator/: SKILL.md
skills/skill-vetter/: SKILL.md
skills/skill_creator/: SKILL.md
tests/: conftest.py  test_agents.py  test_config.py  test_consolidation.py  test_core_memory.py  test_cron.py  test_cron_integration.py  test_cron_tools.py  test_embeddings.py  test_event_log.py  test_executor.py  test_extraction.py  test_gateway.py  test_init.py  test_integration.py  test_logging_config.py  test_memory_integration.py  test_memory_tools.py  test_orchestrator.py  test_planner.py  test_primary.py  test_provider.py  test_retrieval.py  test_session.py  test_session_debugger.py  test_skills.py  test_subagents_deep_research.py  test_subagents_draft_longform.py  test_system_prompts.py  test_telegram.py  test_tools.py  test_trace_events.py  test_trace_store.py  test_types.py
ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
(+78 files in other folders)
