[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "kore"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai[anthropic]>=0.0.14",
    "pydantic>=2.0",
    "httpx>=0.27",
    "trafilatura>=1.12",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "sqlite-vec>=0.1.1",
    "python-telegram-bot>=20.0",
    "croniter>=2.0,<3.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "python-multipart>=0.0.9",
    "python-json-logger>=2.0,<3",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
embeddings = ["sentence-transformers>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
